[package]
name = "vehicle-nav"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
env_logger = "0.8"
log = "0.4"
url = "2.2"

[dependencies.map-tiler]
path = "../libs/map-tiler"

[dependencies.osm-client]
path = "../libs/osm-client"

[dependencies.raylib]
path = "../libs/raylib"
