[package]
name = "vehicle-nav"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
env_logger = "0.8"
log = "0.4"
structopt = "0.3"
exitcode = "1.1"
err-derive = "0.3"
crossbeam = "0.8"
tiny-skia = "0.5"

[dependencies.ctrlc]
version = "3.1"
features=["termination"]

[dependencies.map-tiler]
path = "../libs/map-tiler"

[dependencies.osm-client]
path = "../libs/osm-client"

[dependencies.raylib]
path = "../libs/raylib"

[dependencies.config]
path = "../libs/config"
