[package]
name = "config"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
err-derive = "0.3"
toml = "0.5"
log = "0.4"

[dependencies.url]
version = "2.2"
features=["serde"]

[dependencies.serde]
version = "1.0"
features=["derive"]

[dependencies.osm-client]
path = "../osm-client"

[dev-dependencies]
approx = "0.4"
